# AnymateLab

./: CMakeLists.txt  Main.qml  README.md  anymatenamespace.h  arrangements2d.cpp  arrangements2d.h  boostgeometry.cpp  boostgeometry.h  color.cpp  color.h  cubes.cpp  cubes.h  curve.cpp  curve.h  drawer.cpp  drawer.h  earclipping.cpp  earclipping.h  features.cpp  features.h  graphic.cpp  graphic.h  main.cpp  morphing.cpp  morphing.h  motion.cpp  motion.h  outline.cpp  outline.h  outline2D.cpp  outline2D.h  pen.cpp  pen.h  polygon.cpp  polygon.h  resources.qrc  sampleitem.cpp  sampleitem.h  squircles.cpp  squircles.h  (+13 more)
shaders/: bezier.frag  bezier.vert  color.frag  color.vert  curve.frag  curve.vert  motion.frag  motion.vert  recttexture.frag  recttexture.vert  shape.frag  stage.vert
